don't replace identical resource files